# intelligent-trading-bot

./: .gitignore  CHANGELOG.md  COMMON_MODULES.md  Dockerfile  PR_DESCRIPTION.md  README.md  README.txt  SPRINT_1_COMPLETION_REPORT.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_GUIDE.md  active_jobs.json  build.py  config-sample-latest.json  config-sample-v0.2.0.json  config-sample-v0.3.0.json  config-sample-v0.4.0.json  config-sample-v0.5.0.json  config-sample-v0.6.dev.json  job_status.txt  pyproject.toml  requirements.txt  run_bot.bat  run_server.sh  scripts_list.json  start-grid.py  start.py  tmp_poll_jobs.ps1  tmp_poll_jobs_once.ps1  tmp_start_jobs.ps1
collectors/: collector_depth.py  collector_ws.py
common/: analyzer.py  backtesting.py  classifier_gb.py  classifier_lc.py  classifier_nn.py  classifier_svc.py  classifiers.py  depth_processing.py  feature_generation.py  feature_generation_rolling_agg.py  feature_prediction.py  feature_prediction_OLD.py  gen_features.py  gen_features_rolling_agg.py  gen_labels_highlow.py  gen_labels_topbot.py  gen_signals.py  generators.py  label_generation.py  label_generation_highlow.py  label_generation_top_bot.py  label_generation_topbot.py  model_store.py  my_feature_example.py  signal_generation.py  types.py  utils.py  utils_mt5.py
configs/: config-mt5-sample-1h.jsonc  config-quick-1d-ci.jsonc  config-quick-1d.jsonc  config-sample-1h.jsonc  config-sample-1h.yaml  config-sample-1min.jsonc  config-sample-v0.6.0.jsonc  config-sample-v0.6.dev.json  config-sample-v0.7.dev.jsonc  config-test.json  config-test.jsonc
dashboard/: dashboard.db  main.py  requirements.txt  test_script_execution.bat
docs/: column-oriented-design.md  configuration.md  conventions.md  dashboard-advanced-development-roadmap.md  dashboard-final-implementation-guide.md  dashboard-user-workflows.md  data-inputs.md  features.md  labels.md  outputs-trader.md  scripts.md  server.md  signaler.md  trader.md  trainable-features.md
inputs/: __init__.py  collector_binance.py  collector_mt5.py  collector_yahoo.py  download_binance.py  download_mt5.py  download_yahoo.py  utils_binance.py
intelligent_trading_bot/: __main__.py  backtest.py  config.py  sage_cli.py  sage_ctl.py
outputs/: __init__.py  notifier_diagram.py  notifier_scores.py  notifier_trades.py  trader_binance.py  trader_mt5.py
planning/: PROJECT_BOARD.md
scripts/: __init__.py  backtest.py  binance-data.py  ci_dummy.py  confidence_mining.py  depth_to_features.py  download.py  download_binance.py  download_data.py  download_data_binance.py  download_data_yahoo.py  download_mt5.py  download_yahoo.py  features.py  gb_classification2.py  generate_features.py  generate_labels.py  generate_labels_top_bot.py  generate_predictions.py  generate_rolling_predictions.py  generate_signals.py  grid_search.py  grid_search_gb.py  grid_search_nn.py  gridsearch_gb_old.py  hyper_parameters.py  labels.py  merge.py  merge_data.py  model_store.py  output.py  predict.py  predict_rolling.py  predict_scores.py  signals.py  simulate.py  simulate2.py  test_print.py  train.py  train_predict_models.py  (+3 more)
service/: App.py  analyzer.py  collector.py  collector_binance.py  mt5.py  notifier.py  notifier_diagram.py  notifier_scores.py  notifier_trades.py  server.py  trader.py  trader_binance.py  types.py
setup/: dashboard_setup.json
tests/: conftest.py  test_classifiers.py  test_label_generation.py  test_utils.py
tools/: PLAYWRIGHT_CI_README.md  POLLER_README.md  PR_DRAFT.md  UI_PLAYWRIGHT_README.md  build_ci_runs_summary.py  check_job_debug.py  diff_ui_vs_terminal_env.py  export_project_items.py  issues_status_report.md  package-lock.json  package.json  pipeline_smoke_local.py  run_poller_bg.ps1  (+3 more)
(+91 files in other folders)
